Change the page to a redirect page

--- a/index.html
+++ b/index.html
@@ -1,10 +1,81 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Redirect</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            margin: 0;
+        }
+
+        input {
+            width: 350px;
+            padding: 10px;
+            margin: 10px 0;
+            font-size: 16px;
+            border: 1px solid #ddd;
+            border-radius: 5px;
+        }
+
+        button {
+            padding: 10px 20px;
+            font-size: 16px;
+            cursor: pointer;
+            border: none;
+            border-radius: 5px;
+            background-color: #007BFF;
+            color: white;
+            transition: background-color 0.3s ease;
+        }
+
+            button:hover {
+                background-color: #0056b3;
+            }
+
+        .error {
+            color: red;
+            font-size: 14px;
+            margin-top: 10px;
+        }
+    </style>
+</head>
 <body>
+    <h1>Redirect Example</h1>
+    <p>Enter the target URL below:</p>
+    <input type="text" id="url-input" placeholder="Enter the target URL here" />
+    <button id="redirect-button">Redirect</button>
+    <p id="error-message" class="error"></p>
 
-    <h1>The iframe element + CSS</h1>
+    <script>
+        document.getElementById('redirect-button').addEventListener('click', () => {
+            const urlInput = document.getElementById('url-input').value.trim();
+            const errorMessage = document.getElementById('error-message');
 
-    <iframe src="https://lna-testing.notyetsecure.com//" width="100%" height="1000" allow="local-network-access *" />
+            if (urlInput === '') {
+                errorMessage.textContent = 'Please enter a valid URL.';
+                return;
+            }
 
+            try {
+                // Validate URL by trying to construct it
+                const url = new URL(urlInput);
+
+                // Reset the error message
+                errorMessage.textContent = '';
+
+                // Redirect to the given URL
+                window.location.href = url.href;
+            } catch (error) {
+                errorMessage.textContent = 'Invalid URL format. Please try again.';
+            }
+        });
+    </script>
 </body>
 </html>
