--- a/index.html
+++ b/index.html
@@ -77,5 +77,29 @@
             }
         });
     </script>
+
+    <button id="fetch-button">Fetch Data from http://localhost:8080</button>
+    <div id="output-container">
+        <h3>Output:</h3>
+        <pre id="output"></pre>
+    </div>
+
+    <script>
+        document.getElementById('fetch-button').addEventListener('click', async () => {
+            const outputElement = document.getElementById('output');
+            try {
+                const response = await fetch('http://localhost:8080');
+
+                if (!response.ok) {
+                    throw new Error(`HTTP error! Status: ${response.status}`);
+                }
+
+                const data = await response.text(); // assume a text response
+                outputElement.textContent = `Success:\n${data}`;
+            } catch (error) {
+                outputElement.textContent = `Error:\n${error.message}`;
+            }
+        });
+    </script>
 </body>
 </html>
